--- a/code/01-learn-react/00-语法补充/02-JS中类的继承.html
+++ b/code/01-learn-react/00-语法补充/02-JS中类的继承.html
@@ -1,76 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <script>
-    /**
-     * 面向对象有三大特性：封装、继承、多态
-     * 继承：1.减少重复代码 2.多态的前提
-     */
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <script>
+      /**
+       * 面向对象有三大特性：封装、继承、多态
+       * 继承：1.减少重复代码 2.多态的前提
+       */
 
-     class Person {
-       constructor(name, age) {
-         this.name = name;
-         this.age = age;
-       }
+      class Person {
+        constructor(name, age) {
+          this.name = name;
+          this.age = age;
+        }
 
-       running() {
-         console.log('running');
-       }
-     }
-    
-     class Student extends Person {
-      constructor(name, age, sno) {
-        // super指父类
-        super(name, age);
-        this.sno = sno;
+        running() {
+          console.log('running');
+        }
       }
-    }
-    const stu = new Student('liux', 18, 001);
-    console.log(stu.name, stu.age, stu.sno);
-    stu.running();
 
-    class Teacher extends Person {
-      constructor(name, age, title) {
-        // 子类必须初始化父类
-        super(name, age);
-        this.title = title;
+      class Student extends Person {
+        constructor(name, age, sno) {
+          // super指父类
+          super(name, age);
+          this.sno = sno;
+        }
       }
-    }
-    const teacher = new Teacher('liux', 24, '军事学学士')
-    console.log(teacher.name, teacher.age, teacher.title);
-    teacher.running();
+      const stu = new Student('liux', 18, 001);
+      console.log(stu.name, stu.age, stu.sno);
+      stu.running();
 
-    //  class Student {
-    //    constructor(name, age, sno) {
-    //      this.name = name;
-    //      this.age = age;
-    //      this.sno = sno;
-    //    }
+      class Teacher extends Person {
+        constructor(name, age, title) {
+          // 子类必须初始化父类
+          super(name, age);
+          this.title = title;
+        }
+      }
+      const teacher = new Teacher('liux', 24, '军事学学士');
+      console.log(teacher.name, teacher.age, teacher.title);
+      teacher.running();
 
-    //    running() {
-    //      console.log('running');
-    //    }
-    //  }
+      //  class Student {
+      //    constructor(name, age, sno) {
+      //      this.name = name;
+      //      this.age = age;
+      //      this.sno = sno;
+      //    }
 
-    //  class Teacher {
-    //    constructor(name, age, title) {
-    //      this.name = name;
-    //      this.age = age;
-    //      this.title = title;
-    //    }
+      //    running() {
+      //      console.log('running');
+      //    }
+      //  }
 
-    //    running() {
-    //      console.log('running');
-    //    }
-    //  }
+      //  class Teacher {
+      //    constructor(name, age, title) {
+      //      this.name = name;
+      //      this.age = age;
+      //      this.title = title;
+      //    }
 
-
-  </script>
-</body>
+      //    running() {
+      //      console.log('running');
+      //    }
+      //  }
+    </script>
+  </body>
 </html>
