--- a/code/01-learn-react/01-hello-react/04-hello-react-组件化实现.html
+++ b/code/01-learn-react/01-hello-react/04-hello-react-组件化实现.html
@@ -1,57 +1,68 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-</head>
+  <body>
+    <div id="root"></div>
 
-<body>
-  <div id="root"></div>
+    <!-- 开发依赖 -->
+    <script src="../react/react.development.js" crossorigin></script>
+    <script src="../react/react-dom.development.js" crossorigin></script>
+    <script src="../react/babel.min.js"></script>
 
-  <!-- 开发依赖 -->
-  <script src="../react/react.development.js" crossorigin></script>
-  <script src="../react/react-dom.development.js" crossorigin></script>
-  <script src="../react/babel.min.js"></script>
+    <script type="text/babel">
+      // 封装App组件
+      class App extends React.Component {
+        // 属性构造器
+        constructor() {
+          // 初始化，要使用this，必须调用super()进行初始化
+          super();
+          // this.message = 'hello react';
+          this.state = {
+            message: 'hello react'
+          };
+        }
+        render() {
+          return (
+            <div>
+              <h2>{this.state.message}</h2>
+              <button onClick={this.btnClick.bind(this)}>修改文本</button>
+            </div>
+          );
+        }
 
-  <script type="text/babel">
-    // 封装App组件
-    class App extends React.Component {
-      // 属性构造器
-      constructor() {
-        // 初始化，要使用this，必须调用super()进行初始化
-        super();
-        // this.message = 'hello react';
-        this.state = {
-          message : 'hello react'
+        btnClick() {
+          // this.state.message = 'hello world';
+          // console.log(this.message);
+          // 内部重新执行render，进行数据更改
+          this.setState({
+            message: 'hello world'
+          });
         }
       }
-      render() {
+
+      function ShowMessage(props) {
+        const [message, setMessage] = React.useState(`Hello ${props.name}`);
         return (
           <div>
-            <h2>{this.state.message}</h2>
-            <button onClick={this.btnClick.bind(this)}>修改文本</button>
+            <h1>{message}</h1> {/*Kylin*/}
+            <button onClick={() => setMessage('Hello 小刘同学')}>
+              点击试试
+            </button>
           </div>
-        )
+        );
       }
 
-      btnClick() {
-        // this.state.message = 'hello world';
-        // console.log(this.message);
-        // 内部重新执行render，进行数据更改
-        this.setState({
-          message: 'hello world'
-        })
-        
-      }
-    }
-
-
-  // 渲染组件
-    ReactDOM.render(<App />, root)
-  </script>
-</body>
-
+      // 渲染class组件
+      ReactDOM.render(<App />, root);
+      // 渲染function组件
+      // name="Kylin"作为props传入
+      ReactDOM.render(<ShowMessage name="Kylin" />, root);
+    </script>
+  </body>
 </html>
