--- a/code/01-learn-react/03-JSX核心语法二/01-JSX绑定属性.html
+++ b/code/01-learn-react/03-JSX核心语法二/01-JSX绑定属性.html
@@ -1,62 +1,65 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-</head>
+  <body>
+    <div id="root"></div>
 
-<body>
-  <div id="root"></div>
+    <script src="../react/react.development.js"></script>
+    <script src="../react/react-dom.development.js"></script>
+    <script src="../react/babel.min.js"></script>
 
-  <script src="../react/react.development.js"></script>
-  <script src="../react/react-dom.development.js"></script>
-  <script src="../react/babel.min.js"></script>
+    <script type="text/babel">
+      function getSizeImage(imgUrl, size) {
+        return imgUrl + `?param=${size}x${size}`;
+      }
 
-  <script type="text/babel">
+      class App extends React.Component {
+        constructor() {
+          super();
+          this.state = {
+            title: '标题',
+            imgURL:
+              'https://portrait.gitee.com/uploads/avatars/user/2793/8380595_liux1118_1628671708.png!avatar30',
+            link: 'https://www.baidu.com',
+            active: true
+          };
+        }
+        render() {
+          const { title, imgURL, link, active } = this.state;
+          return (
+            <div>
+              {/*1.绑定普通属性*/}
+              <h2 title={title}>我是标题</h2>
+              <img src={getSizeImage(imgURL, 100)} alt="" />
+              <br />
+              <a href={link} target="_black">
+                百度一下
+              </a>
 
-    function getSizeImage(imgUrl, size) {
-        return imgUrl + '?param=${size}x${size}'
-    }
+              {/*2.绑定class*/}
+              <div className="box">我是div标签</div>
+              <div className={'box ' + (active ? 'active' : '')}>
+                我是div标签
+              </div>
 
-    class App extends React.Component {
-      constructor() {
-        super();
-        this.state = {
-          title: '标题',
-          imgURL: 'https://img0.baidu.com/it/u=3865485647,27426232&fm=26&fmt=auto&gp=0.jpg',
-          link: 'https://www.baidu.com',
-          active: true,
+              <label htmlFor=""></label>
+
+              {/*3.绑定style*/}
+              <div style={{ color: '#01a1fb', fontSize: '20px' }}>
+                我是div，绑定style属性
+              </div>
+            </div>
+          );
         }
       }
-      render() {
-        const {title, imgURL, link, active} = this.state;
-        return (
-          <div>
-            {/*1.绑定普通属性*/}
-            <h2 title={title}>我是标题</h2>
-            <img src={getSizeImage(imgURL, 100)} alt="" /><br/>
-            <a href={link} target="_black">百度一下</a>
 
-            {/*2.绑定class*/}
-            <div className="box">我是div标签</div>
-            <div className={"box " + (active ? "active" : "")}>我是div标签</div>
-
-            <label htmlFor=""></label>
-
-            {/*3.绑定style*/}
-            <div style={{color: "red", fontSize: '20px'}}>我是div，绑定style属性</div>
-          </div>
-        )
-      }
-
-      
-    }
-
-    ReactDOM.render(<App/>, root)
-  </script>
-</body>
-
+      ReactDOM.render(<App />, root);
+    </script>
+  </body>
 </html>
