--- a/code/01-learn-react/03-JSX核心语法二/02-JSX事件绑定及this处理.html
+++ b/code/01-learn-react/03-JSX核心语法二/02-JSX事件绑定及this处理.html
@@ -1,73 +1,76 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-</head>
+  <body>
+    <div id="root"></div>
 
-<body>
-  <div id="root"></div>
+    <script src="../react/react.development.js"></script>
+    <script src="../react/react-dom.development.js"></script>
+    <script src="../react/babel.min.js"></script>
 
-  <script src="../react/react.development.js"></script>
-  <script src="../react/react-dom.development.js"></script>
-  <script src="../react/babel.min.js"></script>
+    <script type="text/babel">
+      class App extends React.Component {
+        constructor(props) {
+          super(props);
+          this.state = {
+            message: '点击点击',
+            counter: 0
+          };
 
-  <script type="text/babel">
-
-    class App extends React.Component {
-      constructor(props) {
-        super(props);
-        this.state = {
-          message : '点击点击',
-          counter: 0,
+          this.btnClick = this.btnClick.bind(this);
+          // this.increment = this.increment.bind(this);
         }
+        render() {
+          return (
+            <div>
+              <div>{this.state.counter}</div>
+              {/*1.方案一：bind绑定this(显示绑定)*/}
+              {/*<button onClick={this.btnClick.bind(this)}>按钮</button>*/}
+              <button onClick={this.btnClick}>按钮</button>
+              <button onClick={this.btnClick}>按钮</button>
+              <button onClick={this.btnClick}>按钮</button>
 
-        this.btnClick = this.btnClick.bind(this);
-        // this.increment = this.increment.bind(this);
+              {/*1.方案二：定义函数时，使用箭头函数*/}
+              <button onClick={this.increment}>+1</button>
 
+              {/*1.方案三（推荐）：直接传入箭头函数，在函数中调用需要执行的函数*/}
+              <button
+                onClick={() => {
+                  this.decrement();
+                }}
+              >
+                -1
+              </button>
+            </div>
+          );
+        }
+        btnClick() {
+          console.log(this.state.message);
+          // console.log(this);
+        }
+        // increment() {
+        //   this.setState ({
+        //     counter : this.state.counter + 1
+        //   })
+        //   console.log(this.state.counter);
+        // }
+
+        // 箭头函数中永远不绑定this，会去找上层的this
+        increment = () => {
+          console.log(this.state.counter);
+        };
+        decrement() {
+          console.log(this.state.counter);
+        }
       }
-      render() {
-        return (
-          <div>
-            {/*1.方案一：bind绑定this(显示绑定)*/}
-            {/*<button onClick={this.btnClick.bind(this)}>按钮</button>*/}
-            <button onClick={this.btnClick}>按钮</button>
-            <button onClick={this.btnClick}>按钮</button>
-            <button onClick={this.btnClick}>按钮</button>
 
-            {/*1.方案二：定义函数时，使用箭头函数*/}
-            <button onClick={this.increment}>+1</button>
-
-            {/*1.方案三（推荐）：直接传入箭头函数，在函数中调用需要执行的函数*/}
-            <button onClick={() => {this.decrement()}}>-1</button>
-          </div>
-        )
-      }
-      btnClick() {
-        console.log(this.state.message);
-        // console.log(this);
-      }
-      // increment() {
-      //   this.setState ({
-      //     counter : this.state.counter + 1
-      //   })
-      //   console.log(this.state.counter);
-      // }
-
-      // 箭头函数中永远不绑定this，会去找上层的this
-      increment = () => {
-        console.log(this.state.counter);
-      }
-      decrement() {
-        console.log(this.state.counter);
-      }
-    }
-
-    ReactDOM.render(<App/>, root)
-  </script>
-</body>
-
+      ReactDOM.render(<App />, root);
+    </script>
+  </body>
 </html>
