--- a/code/01-learn-react/03-JSX核心语法二/03-JSX事件绑定-传递参数.html
+++ b/code/01-learn-react/03-JSX核心语法二/03-JSX事件绑定-传递参数.html
@@ -1,59 +1,55 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-</head>
+  <body>
+    <div id="root"></div>
 
-<body>
-  <div id="root"></div>
+    <script src="../react/react.development.js"></script>
+    <script src="../react/react-dom.development.js"></script>
+    <script src="../react/babel.min.js"></script>
 
-  <script src="../react/react.development.js"></script>
-  <script src="../react/react-dom.development.js"></script>
-  <script src="../react/babel.min.js"></script>
+    <script type="text/babel">
+      class App extends React.Component {
+        constructor(props) {
+          super(props);
+          this.state = {
+            message: '发生点击',
+            movies: ['流浪地球', '大话西游', '空天猎']
+          };
 
-  <script type="text/babel">
-
-    class App extends React.Component {
-      constructor(props) {
-        super(props);
-        this.state = {
-          message : '发生点击',
-          movies: ['流浪地球', '大话西游', '空天猎']
+          this.btnClick = this.btnClick.bind(this);
+        }
+        render() {
+          return (
+            <div>
+              <button onClick={this.btnClick}>按钮</button>
+              <ul>
+                {this.state.movies.map((item, index) => (
+                  <li key={index} onClick={(e) => this.liClick(item, index, e)}>
+                    {item}
+                  </li>
+                ))}
+              </ul>
+            </div>
+          );
         }
 
-        this.btnClick = this.btnClick.bind(this);
-
-      }
-      render() {
-        return (
-          <div>
-            <button onClick={this.btnClick}>按钮</button>
-            <ul>
-              {
-                this.state.movies.map((item, index) => (<li 
-                  key={index} 
-                  onClick={e => {this.liClick(item, index, e)}}>{item}</li>))
-              }  
-            </ul>
-          </div>
-        )
+        btnClick(event) {
+          console.log(this.state.message);
+          console.log(event);
+        }
+        liClick(item, index, e) {
+          console.log('li发生点击', item, index, e);
+        }
       }
 
-      btnClick(event) {
-        console.log(this.state.message);
-        console.log(event);
-      }
-      liClick(item, index, e) {
-        console.log('li发生点击', item, index, e);
-      }
-    }
-
-    ReactDOM.render(<App/>, root)
-  </script>
-</body>
-
+      ReactDOM.render(<App />, root);
+    </script>
+  </body>
 </html>
