--- a/code/01-learn-react/Hook.html
+++ b/code/01-learn-react/Hook.html
@@ -20,7 +20,7 @@
        * 给函数组件增加了操作副作用的能力。
        * 它跟 class 组件中的 componentDidMount、componentDidUpdate 和 componentWillUnmount 具有相同的用途，只不过被合并成了一个 API
        */
-      function Example() {
+      function Example(props) {
         const [count, setCount] = React.useState(0);
 
         // 相当于 componentDidMount 和 componentDidUpdate:
@@ -29,10 +29,38 @@
           document.title = `You clicked ${count} times`;
         });
 
+        const [isOnline, setIsOnline] = React.useState(null);
+
+        useEffect(() => {
+          function handleStatusChange(status) {
+            setIsOnline(status.isOnline);
+          }
+          ChatAPI.subscribeToFriendStatus(props.friend.id, handleStatusChange);
+
+          // 返回一个函数，是Hook的清除副作用机制（可选的，因为有些副作用不需要清楚）
+          // 在组件卸载时会执行
+          // 也可以是返回一个箭头函数
+          return function cleanup() {
+            ChatAPI.unsubscribeFromFriendStatus(
+              props.friend.id,
+              handleStatusChange
+            );
+          };
+
+          // return () => {
+          //   ChatAPI.unsubscribeFromFriendStatus(
+          //     props.friend.id,
+          //     handleStatusChange
+          //   );
+          // }
+        });
+
         return (
           <React.Fragment>
             <p>You clicked {count} times</p>
             <button onClick={() => setCount(count + 1)}>Click me</button>
+            <hr />
+            <h1>{isOnline ? 'Online' : 'Offline'}</h1>
           </React.Fragment>
         );
       }
